--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* html{
+html{
   box-sizing: border-box;
 }
 *{
@@ -23,9 +23,9 @@ a{
 img{
   display: block;
   max-width: 100%;
-}  */
+} 
 
-body {
+/* body {
   font-family: sans-serif;
   margin: 20px;
   padding: 0;
@@ -59,9 +59,9 @@ body {
 
 .status {
   margin-bottom: 10px;
-}
+} */
 
-/* .youtube-list {
+.youtube-list {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 25px;
@@ -96,4 +96,4 @@ body {
 font-style: 18px;
 color: #999;
 font-weight: 300;
-} */
+}
